# AruviStudio

./: .gitignore  LICENSE  NOTICE  README.md  index.html  livedb_path  package-lock.json  package.json  playwright.config.js  release_local.sh  run_live_calculator_test.sh  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_seed_agents.sql  003_feature_sort_order.sql  004_agent_org.sql  005_skill_catalog_and_team_orchestration.sql  006_coordinator_capacity_and_routing.sql  007_domain_language_alignment.sql  008_team_assignment_scope_alignment.sql  009_fix_workflow_stage_history_fk.sql  010_work_item_setup_type.sql  011_planner_sessions.sql  012_channel_session_bindings.sql  013_planner_draft_state.sql  014_hierarchy_semantics.sql  015_semantic_node_chapter_fields.sql
src-tauri/src/: bootstrap.rs  error.rs  lib.rs  main.rs  planning_doctrine.rs  secrets.rs  state.rs
src-tauri/src/commands/: agent_commands.rs  approval_commands.rs  artifact_commands.rs  channel_commands.rs  finding_commands.rs  mod.rs  model_commands.rs  observability_commands.rs  planner_commands.rs  product_commands.rs  repository_commands.rs  settings_commands.rs  speech_commands.rs  work_item_commands.rs  workflow_commands.rs
src-tauri/src/domain/: agent.rs  approval.rs  artifact.rs  events.rs  finding.rs  mod.rs  model.rs  product.rs  repository.rs  work_item.rs  workflow.rs
src-tauri/src/execution/: docker_runner.rs  file_boundary.rs  git_ops.rs  (+2 more)
(+118 files in other folders)
