[package]
name = "aruvi-studio"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[lib]
name = "aruvi_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
git2 = { version = "0.19", features = ["https"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "2"
async-trait = "0.1"
directories = "5"
walkdir = "2"
regex = "1"
keyring = "2"
futures-util = "0.3"
sha2 = "0.10"
axum = { version = "0.7", features = ["form"] }
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
urlencoding = "2"
